--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
 #content { width: 75%; margin: 0 auto}
 #author { width: 20%; float: right }
 #author  img { width: 20%}
+footer { padding: 10px; border-radius: 10px; border: 2px solid darkred; margin-top: 20px}
